fix(users/infra/views): make username dynamic

--- a/src/users/infra/views/mail/WelcomeMail.ejs
+++ b/src/users/infra/views/mail/WelcomeMail.ejs
@@ -54,7 +54,7 @@
 
     <main>
       <header>
-        <h1>Hello, Jorge</h1>
+        <h1>Hello, <%= username %></h1>
       </header>
 
       <p>Welcome to S1 Auth Services. Hope you enjoy your stay.</p>
